--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
 Django==4.0.6
 django-heroku==0.3.1
+djangorestframework==3.13.1
 psycopg2==2.9.3
+pytz==2022.1
 sqlparse==0.4.2
 whitenoise==6.2.0
