--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
 Django==4.0.6
+django-cors-headers==3.13.0
 django-heroku==0.3.1
 djangorestframework==3.13.1
 psycopg2==2.9.3
